make project buildable